--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-streamlit
-pandas
-gpxpy
-requests
-matplotlib
+streamlit>=1.38.0
+gpxpy>=1.6.2
+requests>=2.31.0
+matplotlib>=3.8.0
+numpy>=1.26.0
+pandas>=2.2.0
+fitparse>=1.2.0
+pydeck>=0.9.1
+plotly>=5.23.0
